NewTaskDevOps/Task3/app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: registry/image:latest
        ports:
        - containerPort: 80
      volumeMounts:
      - name: data-volume
        mountPath: /app/data
  volumes:
  - name: data-volume
    persistentVolumeClaim:
      claimName: app-data-pvc
